src/test/ui/parser/variadic-ffi-3.stderr
error: only foreign functions are allowed to be C-variadic
  --> $DIR/variadic-ffi-3.rs:1:18
   |
LL | fn foo(x: isize, ...) {
   |                  ^^^

error: aborting due to previous error

