src/test/ui/parser/variadic-ffi-3.rs
fn foo(x: isize, ...) {
    //~^ ERROR: only foreign functions are allowed to be C-variadic
}

fn main() {}
